syntax = "proto3";
package collections;
option java_package = "com.booleworks.logicng.serialization";
option java_outer_classname = "ProtoBufCollections";

message PbIntVector {
  repeated int32 element = 1;
  int32 size = 2;
}

message PbBooleanVector {
  repeated bool element = 1;
  int32 size = 2;
}

message PbLongVector {
  repeated int64 element = 1;
  int32 size = 2;
}

message PbIntVectorVector {
  repeated PbIntVector element = 1;
  int32 size = 2;
}
