syntax = "proto3";
package propositions;
import "formulas.proto";
option java_package = "com.booleworks.logicng.serialization";
option java_outer_classname = "ProtoBufPropositions";

message PbStandardProposition {
  formulas.PbFormulas formula = 1;
  string description = 2;
}
